@@ -7,6 +7,8 @@ For users:
 - New: Can filter on user on stock movement list
 - New: When creating a third party from a member, it is set as a new
   customer.
+- New: Can use {tttt} in numbering mask setup. It will be replaced
+  with third party type.
 - Fix: bug #28055 : Unable to modify the date of a cloned command
 - Fix: bug #27891
 
